--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,5 +1,5 @@
 java.lib.path=
 main.file=pingpong.py
-platform.active=Python_3.4.0
-python.lib.path=
+platform.active=Python_2.7.8
+python.lib.path=C:\\Anaconda\\python.exe|
 src.dir=src
